src/objects/Client_Referral__c.object
<CustomObject>
    <fields>
        <fullName>AdditionalOffence__c</fullName>
        <label>AdditionalOffence</label>
        <picklist>
            <picklistValues>
                <fullName>0111 Murder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0112 Manslaughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0113 Infanticide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0121 Manslaughter (traffic fatality)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0122 Dangerous Driving Causing Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0211 Rape of a male or female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0212 Defilement of a boy or girl less than 17 years old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0213 Sexual Offence Involving a mentally impaired person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0214 Aggravated sexual assault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0215 Sexual Assault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0221 Incest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0222 Child Pornography Offences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0223 Child Pornography - Obstruction of warrant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0224 Gross Indecency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0311 Murder - attempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0312 Murder - Threat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0321 Assault causing harm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0322 Poisoning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0323 Assault or obstruction of Garda/Official, resisting arrest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0324 Minor Assault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0331 Harassment, Stalking, threats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0332 Coercion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0333 Menacing Phone Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0334 Incitement to Hatred Offences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0335 Demanding payment of debt causing alarm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0411 Dangerous Driving causing serious bodily harm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0412 Driving/ In charge of a vehicle while over legal alcohol limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0413 Driving/ In charge of a vehicle under the influence of drugs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0414 Dangerous/ Careless driving and motorway offences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0415 Speeding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appropriate_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appropriate Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checked_by_Supervisor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked by Supervisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_FName__c</fullName>
        <formula>Client__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client FName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_LName__c</fullName>
        <formula>Client__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client LName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_TEO__c</fullName>
        <formula>Client__r.TEOID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client TEO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Referrals</relationshipLabel>
        <relationshipName>Client_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Referral_Organisation__c</fullName>
        <label>Community Referral Organisation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Form_signed_by__c</fullName>
        <label>Consent Form signed</label>
        <picklist>
            <picklistValues>
                <fullName>By Client</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>By Parent/Guardian if legally required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not met to date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service refused</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Status_Outcome_Date__c</fullName>
        <label>First Status/Outcome Date</label>
        <summarizedField>Client_Outcome__c.Placement_Date__c</summarizedField>
        <summaryForeignKey>Client_Outcome__c.Referral__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Follow_on_Prison__c</fullName>
        <label>Transferred to Prison</label>
        <picklist>
            <picklistValues>
                <fullName>Arbour Hill Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castlerea Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloverhill Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cork Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dochais Womens Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fort Mitchel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harristown House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limerick Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loughan House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midlands Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountjoy Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oberstown Detention Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Place of Detention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portlaoise Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanganagh Castle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelton Abbey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Patrick&apos;s Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Unit, Mountjoy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trinity House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheatfield Place of Detention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Historical_Latest_Status_Date__c</fullName>
        <label>Historical Latest Status Date</label>
        <summarizedField>Client_Outcome__c.Placement_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Client_Outcome__c.Placement_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>2/1/2013</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Client_Outcome__c.Placement_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>3/31/2013</value>
        </summaryFilterItems>
        <summaryForeignKey>Client_Outcome__c.Referral__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>History_of_Aggression__c</fullName>
        <label>History of Aggression</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>History_of_Sexual_Offending__c</fullName>
        <label>History of Sexual Offending</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>History_of_Violence__c</fullName>
        <label>History of Violence</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jan_outcomes__c</fullName>
        <label>Jan outcomes</label>
        <summaryFilterItems>
            <field>Client_Outcome__c.Placement_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2013</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Client_Outcome__c.Placement_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>1/31/2013</value>
        </summaryFilterItems>
        <summaryForeignKey>Client_Outcome__c.Referral__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Latest_Outcome__c</fullName>
        <label>Latest Outcome</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Status_Outcome__c</fullName>
        <label>Latest Status/Outcome Date</label>
        <summarizedField>Client_Outcome__c.Placement_Date__c</summarizedField>
        <summaryForeignKey>Client_Outcome__c.Referral__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Latest_Status__c</fullName>
        <label>Latest Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Creation_Date__c</fullName>
        <label>Legacy Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Edit_Date__c</fullName>
        <label>Legacy Edit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Edited_By__c</fullName>
        <label>Legacy Edited By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Risk_LSI_R__c</fullName>
        <label>Level of Risk (LSI-R)</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Risk_ROSH__c</fullName>
        <label>Level of Risk (ROSH)</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(MONTH( Latest_Status_Outcome__c ),
 1, &quot;January&quot;,
 2, &quot;February&quot;,
 3, &quot;March&quot;,
 4, &quot;April&quot;,
 5, &quot;May&quot;,
 6, &quot;June&quot;,
 7, &quot;July&quot;,
 8, &quot;August&quot;,
 9, &quot;September&quot;,
 10, &quot;October&quot;,
 11, &quot;November&quot;,
 12, &quot;December&quot;,
 &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Months_to_Release__c</fullName>
        <formula>If( ISBLANK(ReleaseDate__c), (Original_Release_Date__c-Today())/30 ,(ReleaseDate__c-Today())/30 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months to Release</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offence__c</fullName>
        <label>Offence</label>
        <picklist>
            <picklistValues>
                <fullName>0111 Murder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0112 Manslaughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0113 Infanticide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0121 Manslaughter (traffic fatality)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0122 Dangerous Driving Causing Death</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0211 Rape of a male or female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0212 Defilement of a boy or girl less than 17 years old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0213 Sexual Offence Involving a mentally impaired person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0214 Aggravated sexual assault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0215 Sexual Assault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0221 Incest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0222 Child Pornography Offences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0223 Child Pornography - Obstruction of warrant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0224 Gross Indecency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0311 Murder - attempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0312 Murder - Threat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0321 Assault causing harm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0322 Poisoning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0323 Assault or obstruction of Garda/Official, resisting arrest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0324 Minor Assault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0331 Harassment, Stalking, threats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0332 Coercion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0333 Menacing Phone Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0334 Incitement to Hatred Offences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0335 Demanding payment of debt causing alarm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0411 Dangerous Driving causing serious bodily harm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0412 Driving/ In charge of a vehicle while over legal alcohol limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0413 Driving/ In charge of a vehicle under the influence of drugs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0414 Dangerous/ Careless driving and motorway offences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0415 Speeding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <picklist>
            <picklistValues>
                <fullName>Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carlow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castlerea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cavan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donegal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin, Ballyfermot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin, Crumlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin, Finglas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin, North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin, Smithfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin Tallaght</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kildare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limerick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midlands Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountjoy Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sligo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waterford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westmeath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheatfield Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilkenny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tipperary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laois/Offaly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Release_Date__c</fullName>
        <label>Original Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PRIS_Number__c</fullName>
        <label>PRIS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Latest_Status__c</fullName>
        <label>Previous Latest Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prison_Referral_Source__c</fullName>
        <label>Prison Referral Source</label>
        <picklist>
            <picklistValues>
                <fullName>Chaplain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Inter Prison Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEO Inter Prison Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISM Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addiction Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prison__c</fullName>
        <label>Prison</label>
        <picklist>
            <picklistValues>
                <fullName>Arbour Hill Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castlerea Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloverhill Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cork Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dochais Womens Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fort Mitchel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harristown House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limerick Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loughan House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midlands Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountjoy Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oberstown Detention Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Place of Detention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portlaoise Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanganagh Castle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelton Abbey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Patrick&apos;s Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Unit, Mountjoy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trinity House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheatfield Place of Detention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Probation_Team__c</fullName>
        <label>Probation Team</label>
        <picklist>
            <picklistValues>
                <fullName>Adult Supervision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Southside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Northside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prison based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk Offender Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICPO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Termination__c</fullName>
        <label>Reason for Termination</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferralDate__c</fullName>
        <label>ReferralDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_ID__c</fullName>
        <label>Referral ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Type__c</fullName>
        <label>Referred For</label>
        <picklist>
            <picklistValues>
                <fullName>Community Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidance &amp; Placement Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidance Only (HRSO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resettlement Support (CRRS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YPP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrals__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referred_By_Gate_Resettlement__c</fullName>
        <label>Referred By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <picklist>
            <picklistValues>
                <fullName>Addiction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ademilola adesida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agnes M. Scully</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aidan P. Trant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aideen M. McDonnell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aine E. Connolly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aine E. Morris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aine M. Murray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aishling C. Bolger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alan I. Doyle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alan M. Hughes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alice Garvin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alma M. Gavin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amanda Egan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambrose O&apos;Byrne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrea D. Devine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrea M. Bourke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew J. Murphy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andy Crow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anita I. Charles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ann A. OFarrell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna M. AlgostssonGallagher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna M. BradyWilliams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna M.Connolly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna M. Corcoran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna Stoller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna T. Rynn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ann B. Ryan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anne Conway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anne J. Ansbro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_From__c</fullName>
        <label>Referred From</label>
        <picklist>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred From blank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReleaseDate__c</fullName>
        <label>ReleaseDate</label>
        <type>Date</type>
    </fields>
</CustomObject>